# og

./: Cargo.toml  og仕様書.md
src/: apply_logic.rs  calendar.rs  fix.patch  lib.rs  main.rs  main.rs.orig  main.rs.rej  main.rs.rej.orig  markdown_formatter.rs  markdown_parser.rs  task_model.rs
tests/: apply_cli.rs  spec_compliance_test.rs
