[package]
name = "og"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
yup-oauth2 = "9.0"
google-calendar3 = "5.0"
dirs = "5.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.25"
yasumi = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"